# deepscale

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  app.js  index.html  metrics.json  pyproject.toml  style.css
.claude/skills/deepscale/: SKILL.md
.claude/skills/deepscale/references/: pitfalls.md
.github/workflows/: add-to-kanban.yml  nightly_forecast.yml  publish-testpypi.yml  publish.yml  rebench_forecast.yml  release.yml  s2s_testbed.yml  test.yml
dashboard/: index.html
docs/specs/: 2026-07-09-analog-completion-design.md  2026-07-09-index-generalization-design.md
examples/: README.md  demo_checkpoint_roundtrip.py  demo_corrdiff.py  demo_delta_scaling.py  demo_detrended_qm.py  demo_ensemble_regression.py  demo_forecast.py  demo_logistic_wvg.py  demo_probabilistic_method.py  demo_quantile_mapping.py  demo_realdata_comparison.py  demo_realdata_skill.py  demo_seasonal_mme.py  demo_seasonal_mme_multimodel.py  demo_train_inference.py  seasonal_forecast_eastafrica_mam.py
forecasts/: index.json
forecasts/ethiopia/ASO/2026-05/: forecast.nc
forecasts/ethiopia/JAS/2026-05/: forecast.nc
forecasts/ethiopia/JJA/2026-05/: forecast.nc
forecasts/kenya/ASO/2026-05/: forecast.nc
forecasts/kenya/JAS/2026-05/: forecast.nc
forecasts/kenya/JJA/2026-05/: forecast.nc
forecasts/nigeria/ASO/2026-05/: forecast.nc
forecasts/nigeria/JAS/2026-05/: forecast.nc
forecasts/nigeria/JJA/2026-05/: forecast.nc
issuances/ethiopia/2026-01-01/bcsd/: dekad_2026-01-01.nc  dekad_2026-01-11.nc  dekad_2026-01-21.nc  dekad_2026-02-01.nc  dekad_2026-02-11.nc
issuances/ethiopia/2026-01-01/cca/: dekad_2026-01-01.nc  dekad_2026-01-11.nc  dekad_2026-01-21.nc  dekad_2026-02-01.nc  dekad_2026-02-11.nc
issuances/ethiopia/2026-01-01/rank-analog/: dekad_2026-01-01.nc  dekad_2026-01-11.nc  (+3 more)
notebooks/: experimentB1.ipynb
s2s/: index.html
scripts/: DWN_CPT_SRC.sh  benchmark_pycpt.py  install_pycpt.sh  reproduce.py  reproduce_batch.py
scripts/nightly/: __init__.py  config.py  countries.yml  nightly.yml  output_writer.py  publish.py  run_country.py  select_targets.py
scripts/nightly/site/: app.js  index.html  style.css
scripts/s2s/: config.py  dekads.py  detect_new_issuances.py  init_issuance_store.md  issuance_store.py  plotting.py  publish_pages.py  render_dashboard.py  run_issuance.py  s2s.yml  scoring.py  verify.py
site/: theme.css
skills/deepscale/: README.md  SKILL.md
skills/deepscale/examples/: analog_completion.py  calibration.py  end_to_end_forecast.py  ensemble_and_reporting.py  seasonal_mme_pipeline.py  smoothed_calibration.py
skills/deepscale/references/: analog-completion.md  api.md  methods.md  metrics-and-terciles.md  plotting-reporting.md  troubleshooting.md
src/deepscale/: __init__.py  _optional.py  _spatial.py  _warnings.py  analog.py  calibrate.py  climate.py  combine.py  compare.py  completion.py  cv.py  downscale.py  ensemble.py  flex_forecast.py  indices.py  io.py  logistic.py  optimize.py  pev.py  registry.py  series.py  skill.py  tercile.py  time.py
src/deepscale/methods/: __init__.py  _qm_kernel.py  base.py  bcsd.py  cca.py  climatology.py  corrdiff.py  delta.py  dqm.py  ensemble_regression.py  qm.py  rank_analog.py  smoothed_regression.py
src/deepscale/metrics/: __init__.py  base.py  cross_validation.py  crpss.py  generalized_roc.py  heidke.py  msss.py  pearson.py  reliability.py  rmse.py  roc.py  rpss.py  significance.py  spearman.py  spread_error.py  two_afc.py
src/deepscale/pipelines/: __init__.py  seasonal.py
src/deepscale/plotting/: __init__.py  domains.py  forecasts.py  maps.py  modes.py  reliability.py  scenarios.py  skill.py  style.py  styled.py
src/deepscale/reporting/: __init__.py  _pages.py  svslrf.py
src/deepscale/strategies/: __init__.py  base.py  bma.py  drop_worst.py  skill_weighted.py  uniform.py
src/deepscale/training/: __init__.py
tests/: conftest.py  test_agreement.py  test_analog.py  test_calibrate.py  test_calibrate_deterministic.py  test_calibrate_ereg_native_years.py  test_calibrate_probabilistic.py  test_cca_cpt_args.py  test_cca_robustness.py  test_climate.py  test_climatology_integration.py  test_combine_terciles.py  test_completion.py  test_corrdiff.py  test_corrdiff_integration.py  test_crpss.py  test_cv.py  test_deepscale.py  test_delta.py  test_downscale.py  test_dqm.py  test_ensemble.py  test_ensemble_diagnostics.py  test_ensemble_regression.py  test_ensemble_safeguards_integration.py  test_example_eastafrica_mam.py  test_example_logistic_ereg.py  test_flex_forecast.py  test_groc_integration.py  test_indices.py  test_indices_general.py  test_integration_reporting.py  test_logistic.py  test_mask_forecast.py  test_method_invariants.py  test_methods.py  test_metrics.py  test_msss.py  test_nightly.py  test_nightly_integration.py  (+27 more)
tests/s2s/: test_config.py  test_dekads.py  test_detect_new_issuances.py  test_issuance_store.py  test_obs_lookup.py  test_plotting.py  test_plotting_dark.py  test_publish_pages.py  test_render_dashboard.py  test_run_issuance_integration.py  test_scoring.py  test_verify_integration.py
validation/: .gitignore  README.md  bcsd_reference_validation.py  build_region_locators.py  cca_cpt_intermediate_diagnostics.py  cca_cpt_output_semantics.py  cca_synthetic_cpt_parity.py  downscaling_validation.py  downscaling_validation_report.md  empirical_qm_conventions.py  external_archive_compare.py  fill_report_toc_pages.py  lorenz_bcsd_benchmark.py  lorenz_deepscale_bcsd_compare.py  method_specific_figures.py  nextgen_ethiopia_cca_validation.py  plot_validation_results.py  probabilistic_real_forecast_verification.py  pycpt_cca_parity.py  qm_dqm_additive_variant_plan.md  qm_dqm_decision_memo.md  qm_dqm_diagnostics.py  rank_analog_reference_validation.py  real_forecast_reference_diagnostics.py  real_forecast_validation.py  regenerate_report_artifacts.sh  render_validation_report_pdf.sh  report_pdf.css  report_toc_pages.js  run_real_ecmwf_full.sh  run_real_ecmwf_overnight.sh
verification/ethiopia/: scores.jsonl
verification/kenya/: scores.jsonl
verification/nigeria/: scores.jsonl
(+2412 files in other folders)
