[project]
name = "deepscale"
version = "0.1.0"
description = "Modular downscaling, calibration, and ensemble framework for seasonal climate forecasts"
requires-python = ">=3.10"
dependencies = [
    "xarray",
    "numpy",
    "scipy",
    "scikit-learn",
    "tqdm",
]

[project.optional-dependencies]
plot = ["matplotlib"]
plotting = ["cartopy>=0.22", "matplotlib>=3.7", "rioxarray"]
dev = ["pytest"]
# GPU dependencies for CorrDiff (torch, earth2studio, physicsnemo) are not on
# PyPI and must be installed manually.  See src/deepscale/methods/corrdiff.py
# for instructions.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepscale"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real data",
    "agreement: DeepScale vs PyCPT reference agreement tests",
    "gpu: requires NVIDIA GPU and earth2studio",
]
