[project]
name = "accord-deepscale"
version = "0.1.0"
description = "Modular downscaling, calibration, and ensemble framework for seasonal climate forecasts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "accord-research" }]
keywords = ["climate", "seasonal-forecasting", "downscaling", "calibration", "xarray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "xarray",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "tqdm",
    "cfgrib>=0.9.15.1",
    "eccodeslib>=2.46.2.19",
    # Plotting/reporting stack is core: users want to see and save their
    # forecast maps, tercile plots, and skill/PDF reports out of the box.
    "matplotlib>=3.7",
    "cartopy>=0.22",
    "rioxarray",
]

[project.urls]
Homepage = "https://github.com/accord-research/deepscale"
Repository = "https://github.com/accord-research/deepscale"

[project.optional-dependencies]
plot = ["matplotlib"]
plotting = ["cartopy>=0.22", "matplotlib>=3.7", "rioxarray"]
dev = ["pytest", "pytest-cov", "PyYAML", "matplotlib"]
validation = [
    "matplotlib>=3.7",
    "python-cmethods",
    "PyYAML",
    "scikit-downscale",
    "scikit-learn<1.6",
    "setuptools<80",
    "xsdba",
]
# GPU dependencies for CorrDiff (torch, earth2studio, physicsnemo) are not on
# PyPI and must be installed manually.  See src/deepscale/methods/corrdiff.py
# for instructions.

[tool.uv]
# The nightly workflow installs rosetta into this env via
# `uv pip install -e ./rosetta` (see .github/workflows/s2s_testbed.yml).
# rosetta's core deps are mutually unsatisfiable out of the box: sheerwater
# hard-pins zarr==2.18.3 while icechunk>=2 needs zarr>=3.1.0. rosetta carries
# its own [tool.uv] override for this, but `uv pip install` reads overrides
# from the project in the working directory (deepscale), not from the package
# being installed, so we must repeat it here. sheerwater's zarr pin is stale
# (it reads through xarray's zarr backend and works under zarr 3), so forcing
# zarr>=3.1.0 is safe.
override-dependencies = ["zarr>=3.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepscale"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires real data",
    "agreement: DeepScale vs PyCPT reference agreement tests",
    "gpu: requires NVIDIA GPU and earth2studio",
]

# Coverage is opt-in (not in addopts) so a bare `pytest` works without
# pytest-cov installed. To check the §9 gate (>85% on src/deepscale, unit
# suite < 30s):
#   pytest -m "not integration and not gpu" \
#       --cov=deepscale --cov-report=term-missing
[tool.coverage.run]
source = ["src/deepscale"]
omit = [
    # ML tiers not yet implemented (§13–§17); excluded so their empty modules
    # don't drag the Part-A coverage number down.
    "*/methods/corrdiff*",
    "*/methods/prithvi*",
    "*/methods/unet*",
    "*/methods/xgboost*",
    "*/methods/random_forest*",
    # Visualization layer: cartopy-gated map rendering, exercised by the
    # plotting examples (which need the optional `plotting` extra), not the
    # algorithmic unit gate.
    "*/plotting/*",
    # Reporting/dashboard subsystem (Pages hub, SVSLRF) — separate from the
    # Part-A forecasting core this §9 gate measures.
    "*/reporting/*",
]
